--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,15 @@
     </properties>
     <name>Archetype - TestProject09</name>
     <url>http://maven.apache.org</url>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 </project>
