--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
     <version>1.0-SNAPSHOT</version>
     <name>Archetype - TestProject09</name>
     <url>http://maven.apache.org</url>
+    <properties>
+        <xmlSuite>myFirstSuiteRun.xml</xmlSuite>
+    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -46,7 +49,7 @@
                 <version>3.0.0-M7</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>myFirstSuiteRun.xml</suiteXmlFile>
+                        <suiteXmlFile>${xmlSuite}</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
