--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.1</version>
         </dependency>
-
+<!--        base 64 encode-->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
