Course15 - run tests with parameters from command line

--- a/src/test/resources/config3.properties
+++ b/src/test/resources/config3.properties
@@ -2,6 +2,16 @@ protocol=https
 hostname=adimoldovan.github.io/web-stubs
 port=
 browser=CHROME
+acceptInsecureCerts=false
+headlessMode=false
+proxyEnabled=false
+proxyAddress=127.0.0.1
+proxyPort=8081
+downloadDirectoryEnabled=true
+startMaximized=true
+enableExtension=false
+extensionName=ether_metamask-10.22.2.xpi
+implicitTimeout=20
 #-------DB Connection-----------
 dbHostname=localhost
 dbPort=3306
